--- a/index.html
+++ b/index.html
@@ -12,53 +12,53 @@
     <header>
       <!-- меню навигации -->
         <nav>
-          <a href="index.html">WebStudio</a>
-          <ul>
-            <li><a href="">Студия</a></li>
-            <li><a href="">Портфолио</a></li>
-            <li><a href="">Контакты</a></li>
+          <a href="index.html" class="logo">Web<span class="logo-black-accent">Studio</span></span></a>
+          <ul class="site-nav">
+            <li><a href="./index.html" class="link current">Студия</a></li>
+            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
+            <li><a href="" class="link">Контакты</a></li>
           </ul>
         </nav>
-        <ul>
+        <ul class="contacts">
           <!-- контакты -->
-          <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+          <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
-      <section class="darkframe">
+      <section class="hero">
         <!-- шапка -->
-        <h1>Эффективные решения для вашего бизнеса</h1>
-        <button type="button">Заказать услугу</button>
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
+        <button class="button" type="button">Заказать услугу</button>
       </section>
       <section>
         <!-- особенности -->
         <h2 hidden>В работе нам помогают:</h2>
         <ul>
           <li>
-            <h3>Внимание к деталям</h3>
-            <p>
+            <h3 class="description-title">Внимание к деталям</h3>
+            <p class="description-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3>Пунктуальность</h3>
-            <p>
+            <h3 class="description-title">Пунктуальность</h3>
+            <p class="description-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3>Планирование</h3>
-            <p>
+            <h3 class="description-title">Планирование</h3>
+            <p class="description-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3>Современные технологии</h3>
-            <p>
+            <h3 class="description-title">Современные технологии</h3>
+            <p class="description-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -67,7 +67,7 @@
       </section>
       <section>
         <!-- чем мы занимаемся -->
-        <h2>Чем мы занимаемся</h2>
+        <h2 class="secondary-title">Чем мы занимаемся</h2>
         <ul>
           <li><img src="images/img1.jpg" alt="box1_coding" width="370" /></li>
           <li>
@@ -78,9 +78,9 @@
           </li>
         </ul>
       </section>
-      <section>
+      <section class="grey-section">
         <!-- наша команда -->
-        <h2>Наша команда</h2>
+        <h2 class="secondary-title">Наша команда</h2>
         <ul>
           <li>
             <img
@@ -88,8 +88,8 @@
               alt="Product Designer Игорь Демьяненко"
               width="270"
             />
-            <h3>Игорь Демьяненко</h3>
-            <p>Product Designer</p>
+            <h3 class="team-title">Игорь Демьяненко</h3>
+            <p class="team-text">Product Designer</p>
           </li>
           <li>
             <img
@@ -97,8 +97,8 @@
               alt="Frontend Developer Ольга Репина"
               width="270"
             />
-            <h3>Ольга Репина</h3>
-            <p>Frontend Developer</p>
+            <h3 class="team-title">Ольга Репина</h3>
+            <p class="team-text">Frontend Developer</p>
           </li>
           <li>
             <img
@@ -106,8 +106,8 @@
               alt="Marketing Николай Тарасов"
               width="270"
             />
-            <h3>Николай Тарасов</h3>
-            <p>Marketing</p>
+            <h3 class="team-title">Николай Тарасов</h3>
+            <p class="team-text">Marketing</p>
           </li>
           <li>
             <img
@@ -115,27 +115,27 @@
               alt="UI Designer Михаил Ермаков"
               width="270"
             />
-            <h3>Михаил Ермаков</h3>
-            <p>UI Designer</p>
+            <h3 class="team-title">Михаил Ермаков</h3>
+            <p class="team-text">UI Designer</p>
           </li>
         </ul>
       </section>
     </main>
-    <footer class="darkframe">
+    <footer>
       <!-- подвал -->
-      <a href="index.html">WebStudio</a>
+      <a href="index.html" class="logo">Web<span class="logo-white-accent">Studio</span></a>
       <address>
         <ul>
           <li>
             <a
-              href="https://bit.ly/3pXMvUd"
-              target="_blank"
-              rel="noopener noreferrer"
-              >г. Киев, пр-т Леси Украинки, 26</a
-            >
+              href="https://bit.ly/3pXMvUd" 
+              target="_blank" rel="noopener noreferrer" 
+              class="link-address">
+              г. Киев, пр-т Леси Украинки, 26
+            </a>
           </li>
-          <li><a href="mailto:info@devstudio.com">info@example.com</a></li>
-          <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+          <li><a href="mailto:info@devstudio.com" class="link-contact">info@example.com</a></li>
+          <li><a href="tel:+380961111111" class="link-contact">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
