--- a/portfolio.html
+++ b/portfolio.html
@@ -12,17 +12,17 @@
     <header>
         <!-- меню навигации -->
         <nav>
-            <a href="index.html">WebStudio</a>
-            <ul>
-                <li><a href="">Студия</a></li>
-                <li><a href="">Портфолио</a></li>
-                <li><a href="">Контакты</a></li>
+            <a href="index.html" class="logo">Web<span class="logo-black-accent">Studio</span></a>
+            <ul class="site-nav">
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
-        <ul>
-            <!-- контакты -->
-            <li><a href="mailto:info@devstudio.com">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <!-- контакты -->
+        <ul class="contacts">
+            <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+            <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
@@ -38,52 +38,60 @@
             </ul>
             <ul>
                 <li><img src="images/img8.jpg" alt="Project 1" width="370"/> 
-                    <h2>Технокряк</h2>
-                    <p>Веб-сайт</p>
+                    <h2 class="progects-title">Технокряк</h2>
+                    <p class="progects-text">Веб-сайт</p>
                 </li>
                 <li><img src="images/img9.jpg" alt="Project 2" width="370"/> 
-                    <h2>Постер New Orlean vs Golden Star</h2>
-                    <p>Дизайн</p>
+                    <h2 class="progects-title">Постер New Orlean vs Golden Star</h2>
+                    <p class="progects-text">Дизайн</p>
                 </li>
                 <li><img src="images/img10.jpg" alt="Project 3" width="370"/> 
-                    <h2>Ресторан Seafood</h2>
-                    <p>Приложение</p>
+                    <h2 class="progects-title">Ресторан Seafood</h2>
+                    <p class="progects-text">Приложение</p>
                 </li>
                 <li><img src="images/img11.jpg" alt="Project 4" width="370"/> 
-                    <h2>Проект Prime</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="progects-title">Проект Prime</h2>
+                    <p class="progects-text">Маркетинг</p>
                 </li>
                 <li><img src="images/img12.jpg" alt="Project 5" width="370"/> 
-                    <h2>Проект Boxes</h2>
-                    <p>Приложение</p>
+                    <h2 class="progects-title">Проект Boxes</h2>
+                    <p class="progects-text">Приложение</p>
                 </li>
                 <li><img src="images/img13.jpg" alt="Project 6" width="370"/> 
-                    <h2>Inspiration has no Borders</h2>
-                    <p>Веб-сайт</p>
+                    <h2 class="progects-title">Inspiration has no Borders</h2>
+                    <p class="progects-text">Веб-сайт</p>
                 </li>
                 <li><img src="images/img14.jpg" alt="Project 7" width="370"/> 
-                    <h2>Издание Limited Edition</h2>
-                    <p>Дизайн</p>
+                    <h2 class="progects-title">Издание Limited Edition</h2>
+                    <p class="progects-text">Дизайн</p>
                 </li>
                 <li><img src="images/img15.jpg" alt="Project 8" width="370"/> 
-                    <h2>Проект LAB</h2>
-                    <p>Маркетинг</p>
+                    <h2 class="progects-title">Проект LAB</h2>
+                    <p class="progects-text">Маркетинг</p>
                 </li>
                 <li><img src="images/img16.jpg" alt="Project 9" width="370"/> 
-                    <h2>Growing Business</h2>
-                    <p>Приложение</p>
+                    <h2 class="progects-title">Growing Business</h2>
+                    <p class="progects-text">Приложение</p>
                 </li>
             </ul>
         </section>
     </main>
-    <footer class="darkframe">
+    <footer>
         <!-- подвал -->
-        <a href="index.html">WebStudio</a>
+        <a href="index.html" class="logo">Web<span class="logo-white-accent">Studio</span></a>
         <address>
             <ul>
-                <li><a href="https://bit.ly/3pXMvUd" target="_blank" rel="noopener noreferrer">г. Киев, пр-т Леси Украинки, 26</a></li>
-                <li><a href="mailto:info@devstudio.com">info@example.com</a></li>
-                <li><a href="tel:+380961111111">+38 096 111 11 11</a></li>
+                <li>
+                    <a 
+                        href="https://bit.ly/3pXMvUd" 
+                        target="_blank" 
+                        rel="noopener noreferrer" 
+                        class="link-address">
+                        г. Киев, пр-т Леси Украинки, 26
+                    </a>
+                </li>
+                <li><a href="mailto:info@devstudio.com" class="link-contact">info@example.com</a></li>
+                <li><a href="tel:+380961111111" class="link-contact">+38 096 111 11 11</a></li>
             </ul> 
         </address>
     </footer>
