--- a/index.html
+++ b/index.html
@@ -5,60 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=+, initial-scale=1.0" />
     <title>Студия</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <header>
-      <!-- меню навигации -->
-        <nav>
-          <a href="index.html" class="logo">Web<span class="logo-black-accent">Studio</span></span></a>
-          <ul class="site-nav">
-            <li><a href="./index.html" class="link current">Студия</a></li>
-            <li><a href="./portfolio.html" class="link">Портфолио</a></li>
-            <li><a href="" class="link">Контакты</a></li>
-          </ul>
+        <!-- меню навигации -->
+        <nav class="site-nav">
+            <a href="index.html" class="logo">Web<span class="logo-black-accent">Studio</span></a>
+            <ul>
+                <li><a href="./index.html" class="link">Студия</a></li>
+                <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
+                <li><a href="" class="link">Контакты</a></li>
+            </ul>
         </nav>
-        <ul class="contacts">
-          <!-- контакты -->
-          <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-          <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
+        <!-- контакты -->
+        <ul>
+            <li class="site-nav"><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+            <li class="site-nav"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
       <section class="hero">
         <!-- шапка -->
         <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
-        <button class="button" type="button">Заказать услугу</button>
+        <button type="button" class="hero-button">Заказать услугу</button>
       </section>
       <section>
         <!-- особенности -->
         <h2 hidden>В работе нам помогают:</h2>
         <ul>
           <li>
-            <h3 class="description-title">Внимание к деталям</h3>
-            <p class="description-text">
+            <h3 class="instruments-title">Внимание к деталям</h3>
+            <p class="instruments-text">
               Идейные соображения, а также начало повседневной работы по
               формированию позиции.
             </p>
           </li>
           <li>
-            <h3 class="description-title">Пунктуальность</h3>
-            <p class="description-text">
+            <h3 class="instruments-title">Пунктуальность</h3>
+            <p class="instruments-text">
               Задача организации, в особенности же рамки и место обучения кадров
               влечет за собой.
             </p>
           </li>
           <li>
-            <h3 class="description-title">Планирование</h3>
-            <p class="description-text">
+            <h3 class="instruments-title">Планирование</h3>
+            <p class="instruments-text">
               Равным образом консультация с широким активом в значительной
               степени обуславливает.
             </p>
           </li>
           <li>
-            <h3 class="description-title">Современные технологии</h3>
-            <p class="description-text">
+            <h3 class="instruments-title">Современные технологии</h3>
+            <p class="instruments-text">
               Значимость этих проблем настолько очевидна, что реализация
               плановых заданий.
             </p>
@@ -67,7 +72,7 @@
       </section>
       <section>
         <!-- чем мы занимаемся -->
-        <h2 class="secondary-title">Чем мы занимаемся</h2>
+        <h2 class="secondary-titles">Чем мы занимаемся</h2>
         <ul>
           <li><img src="images/img1.jpg" alt="box1_coding" width="370" /></li>
           <li>
@@ -78,11 +83,11 @@
           </li>
         </ul>
       </section>
-      <section class="grey-section">
+      <section class="team">
         <!-- наша команда -->
-        <h2 class="secondary-title">Наша команда</h2>
+        <h2 class="secondary-titles">Наша команда</h2>
         <ul>
-          <li>
+          <li class="team-card">
             <img
               src="images/img4.jpg"
               alt="Product Designer Игорь Демьяненко"
@@ -91,7 +96,7 @@
             <h3 class="team-title">Игорь Демьяненко</h3>
             <p class="team-text">Product Designer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="images/img5.jpg"
               alt="Frontend Developer Ольга Репина"
@@ -100,7 +105,7 @@
             <h3 class="team-title">Ольга Репина</h3>
             <p class="team-text">Frontend Developer</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="images/img6.jpg"
               alt="Marketing Николай Тарасов"
@@ -109,7 +114,7 @@
             <h3 class="team-title">Николай Тарасов</h3>
             <p class="team-text">Marketing</p>
           </li>
-          <li>
+          <li class="team-card">
             <img
               src="images/img7.jpg"
               alt="UI Designer Михаил Ермаков"
@@ -121,21 +126,21 @@
         </ul>
       </section>
     </main>
-    <footer>
+    <footer class="footer-list">
       <!-- подвал -->
       <a href="index.html" class="logo">Web<span class="logo-white-accent">Studio</span></a>
       <address>
         <ul>
-          <li>
+          <li class="link">
             <a
               href="https://bit.ly/3pXMvUd" 
               target="_blank" rel="noopener noreferrer" 
-              class="link-address">
+              class="address">
               г. Киев, пр-т Леси Украинки, 26
             </a>
           </li>
-          <li><a href="mailto:info@devstudio.com" class="link-contact">info@example.com</a></li>
-          <li><a href="tel:+380961111111" class="link-contact">+38 096 111 11 11</a></li>
+          <li class="link"><a href="mailto:info@devstudio.com" class="contact">info@example.com</a></li>
+          <li class="link"><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
         </ul>
       </address>
     </footer>
