--- a/portfolio.html
+++ b/portfolio.html
@@ -5,95 +5,99 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=+, initial-scale=1.0">
     <title>Портфолио</title>
-    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
     <header>
         <!-- меню навигации -->
-        <nav>
+        <nav class="site-nav">
             <a href="index.html" class="logo">Web<span class="logo-black-accent">Studio</span></a>
-            <ul class="site-nav">
+            <ul>
                 <li><a href="./index.html" class="link">Студия</a></li>
                 <li><a href="./portfolio.html" class="link current">Портфолио</a></li>
                 <li><a href="" class="link">Контакты</a></li>
             </ul>
         </nav>
         <!-- контакты -->
-        <ul class="contacts">
-            <li><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
-            <li><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
+        <ul>
+            <li class="site-nav"><a href="mailto:info@devstudio.com" class="mail">info@devstudio.com</a></li>
+            <li class="site-nav"><a href="tel:+380961111111" class="tel">+38 096 111 11 11</a></li>
         </ul>
     </header>
     <main>
         <section>
             <!-- проэкты -->
             <h1 hidden>Projects</h1>
-            <ul>
-                <li><button type="button">Все</button></li>
-                <li><button type="button">Веб-сайты</button></li>
-                <li><button type="button">Приложения</button></li>
-                <li><button type="button">Дизайн</button></li>
-                <li><button type="button">Маркетинг</button></li>
+            <ul class="filter-list">
+                <li><button type="button" class="secondary-button active">Все</button></li>
+                <li><button type="button" class="secondary-button">Веб-сайты</button></li>
+                <li><button type="button" class="secondary-button">Приложения</button></li>
+                <li><button type="button" class="secondary-button">Дизайн</button></li>
+                <li><button type="button" class="secondary-button">Маркетинг</button></li>
             </ul>
-            <ul>
-                <li><img src="images/img8.jpg" alt="Project 1" width="370"/> 
+            <ul> 
+                <li><a class="progect-box"><img src="images/img8.jpg" alt="Project 1" width="370"/> 
                     <h2 class="progects-title">Технокряк</h2>
-                    <p class="progects-text">Веб-сайт</p>
+                    <p class="progects-text">Веб-сайт</p></a>
                 </li>
-                <li><img src="images/img9.jpg" alt="Project 2" width="370"/> 
+                <li><a class="progect-box"><img src="images/img9.jpg" alt="Project 2" width="370"/> 
                     <h2 class="progects-title">Постер New Orlean vs Golden Star</h2>
-                    <p class="progects-text">Дизайн</p>
+                    <p class="progects-text">Дизайн</p></a>
                 </li>
-                <li><img src="images/img10.jpg" alt="Project 3" width="370"/> 
+                <li><a class="progect-box"><img src="images/img10.jpg" alt="Project 3" width="370"/> 
                     <h2 class="progects-title">Ресторан Seafood</h2>
-                    <p class="progects-text">Приложение</p>
+                    <p class="progects-text">Приложение</p></a>
                 </li>
-                <li><img src="images/img11.jpg" alt="Project 4" width="370"/> 
+                <li><a class="progect-box"><img src="images/img11.jpg" alt="Project 4" width="370"/> 
                     <h2 class="progects-title">Проект Prime</h2>
-                    <p class="progects-text">Маркетинг</p>
+                    <p class="progects-text">Маркетинг</p></a>
                 </li>
-                <li><img src="images/img12.jpg" alt="Project 5" width="370"/> 
+                <li><a class="progect-box"><img src="images/img12.jpg" alt="Project 5" width="370"/> 
                     <h2 class="progects-title">Проект Boxes</h2>
-                    <p class="progects-text">Приложение</p>
+                    <p class="progects-text">Приложение</p></a>
                 </li>
-                <li><img src="images/img13.jpg" alt="Project 6" width="370"/> 
+                <li><a class="progect-box"><img src="images/img13.jpg" alt="Project 6" width="370"/> 
                     <h2 class="progects-title">Inspiration has no Borders</h2>
-                    <p class="progects-text">Веб-сайт</p>
+                    <p class="progects-text">Веб-сайт</p></a>
                 </li>
-                <li><img src="images/img14.jpg" alt="Project 7" width="370"/> 
+                <li><a class="progect-box"><img src="images/img14.jpg" alt="Project 7" width="370"/> 
                     <h2 class="progects-title">Издание Limited Edition</h2>
-                    <p class="progects-text">Дизайн</p>
+                    <p class="progects-text">Дизайн</p></a>
                 </li>
-                <li><img src="images/img15.jpg" alt="Project 8" width="370"/> 
+                <li><a class="progect-box"><img src="images/img15.jpg" alt="Project 8" width="370"/> 
                     <h2 class="progects-title">Проект LAB</h2>
-                    <p class="progects-text">Маркетинг</p>
+                    <p class="progects-text">Маркетинг</p></a>
                 </li>
-                <li><img src="images/img16.jpg" alt="Project 9" width="370"/> 
+                <li><a class="progect-box"><img src="images/img16.jpg" alt="Project 9" width="370"/> 
                     <h2 class="progects-title">Growing Business</h2>
-                    <p class="progects-text">Приложение</p>
+                    <p class="progects-text">Приложение</p></a>
                 </li>
             </ul>
         </section>
     </main>
-    <footer>
-        <!-- подвал -->
-        <a href="index.html" class="logo">Web<span class="logo-white-accent">Studio</span></a>
-        <address>
-            <ul>
-                <li>
-                    <a 
-                        href="https://bit.ly/3pXMvUd" 
-                        target="_blank" 
-                        rel="noopener noreferrer" 
-                        class="link-address">
-                        г. Киев, пр-т Леси Украинки, 26
-                    </a>
-                </li>
-                <li><a href="mailto:info@devstudio.com" class="link-contact">info@example.com</a></li>
-                <li><a href="tel:+380961111111" class="link-contact">+38 096 111 11 11</a></li>
-            </ul> 
-        </address>
+    <footer class="footer-list">
+      <!-- подвал -->
+      <a href="index.html" class="logo">Web<span class="logo-white-accent">Studio</span></a>
+      <address>
+        <ul>
+          <li class="link">
+            <a
+              href="https://bit.ly/3pXMvUd" 
+              target="_blank" rel="noopener noreferrer" 
+              class="address">
+              г. Киев, пр-т Леси Украинки, 26
+            </a>
+          </li>
+          <li class="link"><a href="mailto:info@devstudio.com" class="contact">info@example.com</a></li>
+          <li class="link"><a href="tel:+380961111111" class="contact">+38 096 111 11 11</a></li>
+        </ul>
+      </address>
     </footer>
 </body>
 </html>
