Работа над ошибками

--- a/portfolio.html
+++ b/portfolio.html
@@ -5,12 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=+, initial-scale=1.0">
     <title>Портфолио</title>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -35,7 +30,7 @@
             <!-- проэкты -->
             <h1 hidden>Projects</h1>
             <ul class="filter-list">
-                <li><button type="button" class="secondary-button active">Все</button></li>
+                <li><button type="button" class="secondary-button">Все</button></li>
                 <li><button type="button" class="secondary-button">Веб-сайты</button></li>
                 <li><button type="button" class="secondary-button">Приложения</button></li>
                 <li><button type="button" class="secondary-button">Дизайн</button></li>
